fix: removed the layout shifting cause which is the font size changes in hover and add tooltip for better accessability

--- a/src/components/link/Link.css
+++ b/src/components/link/Link.css
@@ -5,6 +5,7 @@
   color: inherit;
   gap: 5px;
   padding: 5px;
+  position: relative;
 }
 
 .social-link-icon {
@@ -27,10 +28,7 @@
   transition: font-size 0.3s ease-in-out;
 }
 
-.social-link:hover .social-media-name {
-  font-size: 0.875rem;
-}
-
-.social-link:hover .username {
-  font-size: 0.75rem;
+.social-link:hover .tool-tip {
+  opacity: 1;
+  transition: opacity 0.3s ease-in 0.7s;
 }
