--- a/src/layout/about/About.css
+++ b/src/layout/about/About.css
@@ -87,7 +87,6 @@
   position: relative;
   padding-top: 10px;
   min-width: 310px;
-  overflow: hidden;
 }
 
 /* Title text for links */
